Game logic completed frfr

--- a/eggGame/index.html
+++ b/eggGame/index.html
@@ -5,5 +5,7 @@
   <body>
   <canvas id="canvas" width="1000" height="500"></canvas>
   <script src="main.js" type="module"></script>
+  <div id="score"></div>
+  <div id="life"></div>
 </body>
 </html>
