--- a/eggGame/index.html
+++ b/eggGame/index.html
@@ -7,5 +7,7 @@
   <script src="main.js" type="module"></script>
   <div id="score"></div>
   <div id="life"></div>
+  <div id="eggSpeed"></div>
+  <div id="bucketSpeed"></div>
 </body>
 </html>
